Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54068

Fix warning: "QT_HAS_BUILTIN" redefined

    XMLWordPrintable

Details

    • 930e750b7aca024b839c9856cfcc79aab8c0abbc

    Description

      There are lots of compiler warnings in the bootstrapping process on MinGW:

      In file included from ../../include/QtCore/qendian.h:1:0,
                       from D:/dev/qt/5.7/src/qtbase/src/corelib/tools/qstring.cpp:61:
      D:/dev/qt/5.7/src/qtbase/src/corelib/global/qendian.h:53:0: warning: "QT_HAS_BUILTIN" redefined
       #  define QT_HAS_BUILTIN(x)     __has_builtin(x)
       ^
      In file included from ../../include/QtCore/qcompilerdetection.h:1:0,
                       from D:/dev/qt/5.7/src/qtbase/src/corelib/global/qglobal.h:83,
                       from ../../include/QtCore/qglobal.h:1,
                       from D:/dev/qt/5.7/src/qtbase/mkspecs/win32-g++/qplatformdefs.h:51,
                       from D:/dev/qt/5.7/src/qtbase/tools/configure/configure_pch.h:34:
      D:/dev/qt/5.7/src/qtbase/src/corelib/global/qcompilerdetection.h:1209:0: note: this is the location of the previous definition
       #  define QT_HAS_BUILTIN(x)             0
       ^
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            taipan BogDan Vatra
            kkohne Kai Köhne
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes