Remove duplicated QT_HAS_BUILTIN define

QT_HAS_BUILTIN is already defined in qcompilerdetection.h which is
included in qglobal.h which is included in this header file.

Task-number: QTBUG-54068
Change-Id: I46c2e13d85fc21d3e6c426d0f35a584b21ae792b
Reviewed-by: Kai Koehne <kai.koehne@qt.io>

cregit: 930e750b7aca024b839c9856cfcc79aab8c0abbc https://github.com/qt/qtbase/commit/930e750b7aca024b839c9856cfcc79aab8c0abbc