src/corelib/global/qendian.h
@@ -38,4 +38,3 @@ DECL|function|quint8
 DECL|function|quint8
 DECL|function|quint8
 DECL|macro|QENDIAN_H
-DECL|macro|QT_HAS_BUILTIN
